fixed slider counter bug and horizontal overflow bug

--- a/P10-React/src/App.scss
+++ b/P10-React/src/App.scss
@@ -3,6 +3,7 @@
 
 body {
   font-family: "Space Grotesk", sans-serif;
+  overflow-x: hidden;
 }
 .App {
   text-align: center;
